## Copyright 2009-2021 Intel Corporation
## SPDX-License-Identifier: Apache-2.0

PROJECT(minimal)
CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)

IF (NOT EMBREE_PROJECT_COMPILATION)
  FIND_PACKAGE(embree REQUIRED)
ENDIF()

IF (EMBREE_SYCL_SUPPORT)
  SET(CMAKE_CXX_STANDARD 17)
ENDIF()

ADD_EXECUTABLE(minimal minimal.cpp)
TARGET_LINK_LIBRARIES(minimal embree)

SET_PROPERTY(TARGET minimal PROPERTY FOLDER tutorials/single)
INSTALL(TARGETS minimal DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT examples)
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" DESTINATION "src" COMPONENT examples)
IF (COMMAND SIGN_TARGET)
  SIGN_TARGET(minimal)
ENDIF()

IF (EMBREE_SYCL_SUPPORT)
  
  ADD_EXECUTABLE(minimal_sycl minimal_sycl.cpp)
  TARGET_LINK_LIBRARIES(minimal_sycl embree)
  SET_PROPERTY(TARGET minimal_sycl APPEND PROPERTY COMPILE_FLAGS "-fsycl -Xclang -fsycl-allow-func-ptr -fsycl-targets=spir64")
  SET_PROPERTY(TARGET minimal_sycl APPEND PROPERTY LINK_FLAGS    "-lsycl -fsycl -fsycl-targets=spir64")
  
  SET_PROPERTY(TARGET minimal_sycl PROPERTY FOLDER tutorials/sycl)
  INSTALL(TARGETS minimal_sycl DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT examples)
  IF (COMMAND SIGN_TARGET)
    SIGN_TARGET(minimal_sycl)
  ENDIF()
  
ENDIF()
